--- a/css/style.css
+++ b/css/style.css
@@ -625,6 +625,14 @@ button.submit:active {
     font-size:14px;
 }
 
+#boxcontent2 article h2
+{
+    font-family: 'Open Sans', sans-serif;
+    font-size:24px;
+    margin-bottom:20px;
+    margin-right:75px;
+}
+
 #boxcontent2 article h3
 {
     font-family: 'Open Sans', sans-serif;
@@ -648,6 +656,10 @@ button.submit:active {
     /*margin-left:10px;*/
 }
 
+#boxcontent2 article a:hover
+{
+    color: #ff0000;
+}
 
 
 
