--- a/css/style.css
+++ b/css/style.css
@@ -661,6 +661,217 @@ button.submit:active {
     color: #ff0000;
 }
 
+/*** page freetime.html slider styles ***/
+
+.container_slider{
+    width:750px;
+    height:600px;
+    padding:20px;
+    border:1px solid gray;
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+    background: black;
+    text-align: center;
+}
 
 
+.slider_wrapper{
+    overflow: hidden;
+    position:relative;
+    height:450px; /*280px;*/
+    top:auto;
 
+}
+
+#image_slider{
+
+    position: relative;
+    height: 400px; /*auto;*/
+
+    list-style: none;
+    overflow: hidden;
+    float: left;
+    /*Chrom default padding for ul is 40px */
+    padding:0px;
+    margin:0px;
+}
+
+#foo img
+{
+    display: block;
+    vertical-align: middle;
+    max-height: 35%;
+    max-width: 25%;
+}
+
+#image_slider li{
+    position: relative;
+    float: left;
+
+}
+.nvgt{
+    position:absolute;
+    top: 120px;
+    height: 50px;
+    width: 30px;
+    opacity: 0.6;
+}
+.nvgt:hover{
+    opacity: 0.9;
+}
+#prev{
+    background: #000 url('https://dl.dropboxusercontent.com/u/65639888/image/prev.png') no-repeat center;
+    left: 0px;
+}
+#next{
+    background: #000 url('https://dl.dropboxusercontent.com/u/65639888/image/next.png') no-repeat center;
+    right: 0px;
+}
+#pager{
+    /* firefox has different center method. this doesn't work for fire fox */
+    /* not in the center*/
+    padding:0px;
+    position:relative;
+    height:50px;
+    margin:auto;
+    margin-top:10px;
+}
+#pager li{
+    padding: 0px;
+    margin:5px;
+    width:20px;
+    height:20px;
+    border:1px solid white;
+    color:white;
+    list-style: none;
+    opacity: 0.6;
+    float:left;
+    border-radius: 3px;
+    cursor: pointer;
+}
+#pager li:hover{
+    opacity:0.9;
+}
+
+
+/* JSSOR slider styles - freetime.html */
+
+/* Arrow Navigator Skin Begin */
+/* jssor slider arrow navigator skin 05 css */
+/*
+.jssora05l                  (normal)
+.jssora05r                  (normal)
+.jssora05l:hover            (normal mouseover)
+.jssora05r:hover            (normal mouseover)
+.jssora05l.jssora05ldn      (mousedown)
+.jssora05r.jssora05rdn      (mousedown)
+*/
+.jssora05l, .jssora05r {
+    display: block;
+    position: absolute;
+    /* size of arrow element */
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    background: url(../img/a17.png) no-repeat;
+    overflow: hidden;
+}
+.jssora05l { background-position: -10px -40px; }
+.jssora05r { background-position: -70px -40px; }
+.jssora05l:hover { background-position: -130px -40px; }
+.jssora05r:hover { background-position: -190px -40px; }
+.jssora05l.jssora05ldn { background-position: -250px -40px; }
+.jssora05r.jssora05rdn { background-position: -310px -40px; }
+
+/* Arrow Navigator Skin End */
+
+/* Thumbnail Navigator Skin Begin */
+
+/* jssor slider thumbnail navigator skin 01 css */
+/*
+.jssort01 .p            (normal)
+.jssort01 .p:hover      (normal mouseover)
+.jssort01 .p.pav        (active)
+.jssort01 .p.pdn        (mousedown)
+*/
+
+.jssort01 {
+    position: absolute;
+    /* size of thumbnail navigator container */
+    width: 800px;
+    height: 100px;
+}
+
+.jssort01 .p {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 72px;
+    height: 72px;
+}
+
+.jssort01 .t {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+.jssort01 .w {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+}
+
+.jssort01 .c {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 68px;
+    height: 68px;
+    border: #000 2px solid;
+    box-sizing: content-box;
+    background: url(../img/t01.png) -800px -800px no-repeat;
+    _background: none;
+}
+
+.jssort01 .pav .c {
+    top: 2px;
+    _top: 0px;
+    left: 2px;
+    _left: 0px;
+    width: 68px;
+    height: 68px;
+    border: #000 0px solid;
+    _border: #fff 2px solid;
+    background-position: 50% 50%;
+}
+
+.jssort01 .p:hover .c {
+    top: 0px;
+    left: 0px;
+    width: 70px;
+    height: 70px;
+    border: #fff 1px solid;
+    background-position: 50% 50%;
+}
+
+.jssort01 .p.pdn .c {
+    background-position: 50% 50%;
+    width: 68px;
+    height: 68px;
+    border: #000 2px solid;
+}
+
+* html .jssort01 .c, * html .jssort01 .pdn .c, * html .jssort01 .pav .c {
+    /* ie quirks mode adjust */
+    width /**/: 72px;
+    height /**/: 72px;
+}
+
+/* Thumbnail Navigator Skin End */
